--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,13 @@
   "dependencies": {
     "backend": "file:",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.15.0"
+    "mongoose": "^8.15.0",
+    "multer": "^2.0.0",
+    "multer-storage-cloudinary": "^4.0.0"
   },
   "devDependencies": {
     "dotenv": "^16.5.0",
